[workspace]
members = ["hydra", "hydra-macros", "hydra-test", "hydra-test-client", "hydra-test-main"]
resolver = "2"

[workspace.dependencies]
flume = "0.11"
once_cell = "1.19"
bitflags = "2.4"
hmac = "0.12"
sha2 = "0.10"
pin-project-lite = "0.2"
bincode = "2.0.0-rc.3"
dashmap = "5.5.3"
pingora-timeout = "0.1"
bytes = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.0", default-features = false, features = ["rt", "rt-multi-thread", "net", "sync", "time", "macros"] }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-panic = "0.1"

hydra-macros = { path = "./hydra-macros" }

[profile.release]
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1

[patch.crates-io]
dashmap = { git = "https://github.com/dtzxporter/dashmap", branch = "fix-abort-on-panic-when-already-in-panic" }
