[workspace]
members = ["hydra", "hydra-macros", "hydra-test", "hydra-test-client", "hydra-test-main", "hydra-dashmap", "hydra-websockets"]
resolver = "2"

package.license = "MIT"
package.readme = "README.md"
package.description = "A framework for writing fault tolerant, highly scalable applications with the Rust programming language."
package.repository = "https://github.com/dtzxporter/hydra"
package.keywords = ["erlang", "elixir", "actors"]
package.categories = ["asynchronous", "concurrency", "network-programming"]

[workspace.dependencies]
flume = "0.11"
once_cell = "1.19"
bitflags = "2.4"
hmac = "0.12"
sha2 = "0.10"
pin-project-lite = "0.2"
bincode = "2.0.0-rc.3"
pingora-timeout = "0.2"
smallvec = "1.13"
arc-swap = "1.7"
bytes = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
rmp-serde = "1.3"
tokio = { version = "1.0", default-features = false, features = ["rt", "rt-multi-thread", "net", "sync", "time", "macros", "signal"] }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["handshake"] }
tokio-native-tls = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = "0.3"

hydra-macros = { version = "0.1.24", path = "./hydra-macros" }
hydra-dashmap = { version = "0.1.24", path = "./hydra-dashmap" }
hydra = { version = "0.1.24", path = "./hydra", default-features = false }

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
