[package]
name = "hydra-dashmap"
version = "0.1.17"
edition = "2021"
readme = "./README.md"
license.workspace = true
repository.workspace = true
categories.workspace = true
description = "A fork of dashmap for the hydra framework."

[features]
raw-api = []
inline = ["hashbrown/inline-more"]

[dependencies]
lock_api = "0.4.10"
parking_lot_core = "0.9.8"
hashbrown = { version = "0.14.0", default-features = false }
serde = { version = "1.0.188", optional = true, features = ["derive"] }
cfg-if = "1.0.0"
rayon = { version = "1.7.0", optional = true }
once_cell = "1.18.0"
arbitrary = { version = "1.3.0", optional = true }

[package.metadata.docs.rs]
features = ["rayon", "raw-api", "serde"]
