[package]
name = "hydra"
version = "0.1.3"
edition = "2021"
readme.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
description.workspace = true

[features]
default = ["json", "macros", "tracing"]
json = ["dep:serde_json"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
macros = ["dep:hydra-macros"]

[dependencies]
flume.workspace = true
bytes.workspace = true
sha2.workspace = true
hmac.workspace = true
dashmap.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
pingora-timeout.workspace = true
bincode.workspace = true
serde.workspace = true
once_cell.workspace = true
bitflags.workspace = true
pin-project-lite.workspace = true

hydra-macros = { workspace = true, optional = true }

serde_json = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
