[package]
name = "hydra"
version = "0.1.34"
edition = "2021"
readme.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[features]
default = ["macros", "tracing"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
macros = ["dep:hydra-macros"]
console = ["dep:memory-stats"]

[dependencies]
flume.workspace = true
bytes.workspace = true
sha2.workspace = true
hmac.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
pingora-timeout.workspace = true
bincode.workspace = true
serde.workspace = true
once_cell.workspace = true
bitflags.workspace = true
pin-project-lite.workspace = true
rmp-serde.workspace = true
arc-swap.workspace = true
dashmap.workspace = true

hydra-macros = { workspace = true, optional = true }

tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

memory-stats = { workspace = true, optional = true }
